--- a/SiteFaceBoot/index.html
+++ b/SiteFaceBoot/index.html
@@ -76,7 +76,7 @@
                         <a href="index.html"><i class="glyphicon glyphicon-home"></i> Home</a>
                       </li>
                       <li>
-                        <a href="poste.html" role="button" data-toggle="modal"><i class="glyphicon glyphicon-plus"></i> Post</a>
+                        <a href="post.html" role="button" data-toggle="modal"><i class="glyphicon glyphicon-plus"></i> Post</a>
                       </li>
                       <li>
                         <a href="#"><span class="badge">badge</span></a>
